--- a/frontend/concept/package.json
+++ b/frontend/concept/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "axios": "^1.2.3",
+    "chart.js": "^4.2.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
